--- a/main.html
+++ b/main.html
@@ -5,6 +5,32 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<table>
+		<thead>
+			<th>Roll number</th>
+			<th>Names</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>001</td>
+				<td>Jay</td>
+			</tr>
+			<tr>
+				<td>002</td>
+				<td>Jai</td>
+			</tr>
+			<tr>
+				<td>003</td>
+				<td>j</td>
+			</tr>
+		</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="image"></li>
+		<li><video controls><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
+		<li><audio controls><source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+	</ol>
 
 <body>
 	<!-- the entire body must be written by student -->
